<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="198dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_account"
            android:id="@+id/createaccount_title"
            android:layout_gravity="center_horizontal"
            android:textSize="72sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_field"
            android:password="false"
            android:hint="@string/username_field"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field"
            android:hint="@string/password_field"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordconf_field"
            android:hint="@string/passwordconf_field"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/email_field" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="129dp"
            android:text="@string/create_account"
            android:id="@+id/create_user_button"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>
</RelativeLayout>