<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#E74C3C">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/textView"
            android:layout_weight="0.52"
            android:gravity="center_horizontal"
            android:textSize="72sp"
            android:textColor="#fff"
            android:singleLine="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_weight="0.25"
            android:background="#3498DB"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="36sp"
            android:enabled="true"
            android:onClick="loginUser" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/createaccount_button"
            android:layout_weight="0.25"
            android:background="#3498DB"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="36sp"
            android:enabled="true"
            android:onClick="createUser"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
